--- a/tutorial/Profiler/configs/config.yaml
+++ b/tutorial/Profiler/configs/config.yaml
@@ -4,7 +4,7 @@
 config_file_name: 'basic_config'
 
 # specify output directory where input datasets are located
-folder_path: 'archive/data/tutorial_test_data/lower_dim_datasets'
+folder_path: 'tutorial/Profiler/data/ld_data'
 file_dataset: 'ALL'
 # or use a list as below, to only select a few datasets
 # file_dataset: ['file1', 'file2', 'file3', etc]
@@ -28,7 +28,8 @@ embeddings: ['pca', 'isomap', 'none']
 n_components: 3
 
 # ML models to generate
-model: ['svc', 'dt', 'lr', 'nb', 'rf', 'mlp', 'qsvc', 'vqc', 'qnn', 'pqk']
+# model: ['svc', 'dt', 'lr', 'nb', 'rf', 'mlp', 'qsvc', 'vqc', 'qnn', 'pqk']
+model: ['svc', 'rf',  'qsvc',  'pqk']
 
 average: 'weighted'
 multi_class: 'raise'
